Add cakes validation

--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -38,6 +38,9 @@ h1
 	margin-top: 10px
 	margin-bottom: 10px
 
+.danger
+	color: $danger
+
 
 .btn-link 
 	color: $dark-cherry
@@ -292,6 +295,9 @@ div.ingredients
 				color: $dark-cherry
 				border-top: 1px solid $dark-cherry
 				border-bottom: 1px solid $dark-cherry
+
+			tr.current-tr
+				background-color: $cream;
 
 			td
 				vertical-align: middle
