--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -147,7 +147,7 @@ div.main
 	position: relative
 
 	div.main-block 
-		padding: 50px 20px
+		padding: 25px 50px
 		border-radius: 10px
 		margin-top: 20px
 
@@ -156,6 +156,10 @@ div.main
 
 		&.light-block 
 			background-color: $light-cream
+
+		i 
+			font-size: 1.1em
+			margin-right: 15px
 
 
 
@@ -333,6 +337,10 @@ div.orders
 
 		a 
 			margin-left: 20px
+		
+		a.current 
+			font-weight: bold
+			text-decoration: none
 
 	h2
 		border-bottom: 1px $dark-cherry solid
